@@ -3,7 +3,11 @@ Changes from Ant 1.5.1Beta1 to the current CVS version
 
 Fixed bugs:
 -----------
+
 * <tstamp>'s prefix attribute failed to apply to nested <format> elements.
+
+* <junitreport> created an empty junit-noframes.html if no format had
+  been specified.
 
 Other changes:
 --------------
